clusters/management-hub/argocd-ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.mgmt.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.nwlnexus.net`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls
